[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "A compounding knowledge base maintained by LLM agents — inspired by Andrej Karpathy's LLM Wiki pattern."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Cobus Greyling" }]
keywords = ["llm", "wiki", "knowledge-base", "obsidian", "agents", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
wiki = "llm_wiki.cli:main"

[project.urls]
Homepage = "https://github.com/cobusgreyling/llm-wiki"
Repository = "https://github.com/cobusgreyling/llm-wiki"
"Issue Tracker" = "https://github.com/cobusgreyling/llm-wiki/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]